--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.6.1",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-parnassus": "^0.16.19"
+    "react-icons": "^3.6.1"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
